@@ -21,8 +21,94 @@
 
 #include "activity.h"
 
+#include <QDebug>
+#include <QMetaEnum>
+
 Activity::Activity(QString title):
     m_assignedEmployee(0)
 {
     m_title = title;
+}
+
+Activity::Activity():
+    m_assignedEmployee(0)
+{
+}
+
+void Activity::setStatus(Activity::Status status)
+{
+    m_status = status;
+}
+
+void Activity::setType(Activity::Type type)
+{
+    m_type = type;
+}
+
+void Activity::setPriority(Activity::Priority priority)
+{
+    m_priority = priority;
+}
+
+void Activity::setStatus(QString status)
+{
+    qDebug() << "Activity::setStatus()";
+    QByteArray bytearray = status.toLocal8Bit();
+    qDebug() << "Activity::setStatus() - string value" << status;
+
+    int value = Activity::staticMetaObject.enumerator(
+                 Activity::staticMetaObject.indexOfEnumerator("Status")).
+                 keysToValue(bytearray.data());
+
+    qDebug() << "Activity::setStatus() - value" << value;
+    m_status = static_cast<Activity::Status>(value);
+}
+
+void Activity::setType(QString type)
+{
+    qDebug() << "Activity::setType()";
+    QByteArray bytearray = type.toLocal8Bit();
+    qDebug() << "Activity::setType() - string value" << type;
+
+    int value = Activity::staticMetaObject.enumerator(
+                 Activity::staticMetaObject.indexOfEnumerator("Type")).
+                 keysToValue(bytearray.data());
+
+    qDebug() << "Activity::setType() - value" << value;
+    m_type = static_cast<Activity::Type>(value);
+}
+
+void Activity::setPriority(QString priority)
+{
+    qDebug() << "Activity::setPriority()";
+    QByteArray bytearray = priority.toLocal8Bit();
+    qDebug() << "Activity::setPriority() - string value" << priority;
+
+    int value = Activity::staticMetaObject.enumerator(
+                 Activity::staticMetaObject.indexOfEnumerator("Priority")).
+                 keysToValue(bytearray.data());
+
+    qDebug() << "Activity::setPriority() - value" << value;
+    m_priority = static_cast<Activity::Priority>(value);
+}
+
+QString Activity::getStatusString (Activity::Status value)
+{
+    return Activity::staticMetaObject.enumerator(
+                Activity::staticMetaObject.indexOfEnumerator("Status")).
+                valueToKey(value);
+}
+
+QString Activity::getTypeString (Activity::Type value)
+{
+    return Activity::staticMetaObject.enumerator(
+                Activity::staticMetaObject.indexOfEnumerator("Type")).
+                valueToKey(value);
+}
+
+QString Activity::getPriorityString (Activity::Priority value)
+{
+    return Activity::staticMetaObject.enumerator(
+                Activity::staticMetaObject.indexOfEnumerator("Priority")).
+                valueToKey(value);
 }
